==> xuos/xiuos/board/stm32f407-st-discovery/third_party_driver/gpio/connect_gpio.c <==
#include <device.h>
#include <board.h>
#include "misc.h"
#include "hardware_rcc.h"
#include "hardware_gpio.h"
#include "hardware_exti.h"
#include "hardware_syscfg.h"
#include "connect_gpio.h"
#define STM32_PIN_NUMBERS 100 // [48, 64, 100, 144]
#define __STM32_PIN(index, rcc, gpio, gpio_index) { 0, RCC_##rcc##Periph_GPIO##gpio, GPIO##gpio, GPIO_Pin_##gpio_index}
#define __STM32_PIN_DEFAULT {-1, 0, 0, 0}
#define ITEM_NUM(items) sizeof(items)/sizeof(items[0])

static int32 GpioConfigMode(int mode, const struct PinIndex* index)
{
    GPIO_InitTypeDef gpio_initstructure;
    NULL_PARAM_CHECK(index);

    RCC_AHB1PeriphClockCmd(index->rcc, ENABLE);

    gpio_initstructure.GPIO_Pin   = index->pin;
    gpio_initstructure.GPIO_Speed = GPIO_Speed_2MHz;
    gpio_initstructure.GPIO_PuPd = GPIO_PuPd_NOPULL;

    switch (mode)
    {
        case GPIO_CFG_OUTPUT:
            gpio_initstructure.GPIO_Mode  = GPIO_Mode_OUT;
            gpio_initstructure.GPIO_OType = GPIO_OType_PP;
            break;
        case GPIO_CFG_INPUT:
            gpio_initstructure.GPIO_Mode = GPIO_Mode_IN;
            gpio_initstructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
            break;
        case GPIO_CFG_INPUT_PULLUP:
            gpio_initstructure.GPIO_Mode = GPIO_Mode_IN;
            gpio_initstructure.GPIO_PuPd = GPIO_PuPd_UP;
            break;
        case GPIO_CFG_INPUT_PULLDOWN:
            gpio_initstructure.GPIO_Mode = GPIO_Mode_IN;
            gpio_initstructure.GPIO_PuPd = GPIO_PuPd_DOWN;
            break;
        case GPIO_CFG_OUTPUT_OD:
            gpio_initstructure.GPIO_Mode  = GPIO_Mode_OUT;
            gpio_initstructure.GPIO_OType = GPIO_OType_OD;
            break;
        default:
            break;
    }
    GPIO_Init(index->gpio, &gpio_initstructure);

    return EOK;
}

static int32 GpioIrqRegister(int32 pin, int32 mode, void (*hdr)(void *args), void *args)
{
    const struct PinIndex* index = GetPin(pin);
    int32 irqindex = -1;

    irqindex = Bit2Bitnum(index->pin);
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_hdr_tab)){
        return -ENONESYS;
    }

    x_base level = CriticalAreaLock();
    if (pin_irq_hdr_tab[irqindex].pin == pin   &&
        pin_irq_hdr_tab[irqindex].hdr == hdr   &&
        pin_irq_hdr_tab[irqindex].mode == mode &&
        pin_irq_hdr_tab[irqindex].args == args
    )
    {
        CriticalAreaUnLock(level);
        return EOK;
    }
    if (pin_irq_hdr_tab[irqindex].pin != -1) {
        CriticalAreaUnLock(level);
        return -EDEV_BUSY;
    }
    pin_irq_hdr_tab[irqindex].pin = pin;
    pin_irq_hdr_tab[irqindex].hdr = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    CriticalAreaUnLock(level);
 
    return EOK;
}

static uint32 GpioIrqFree(int32 pin)
{
    const struct PinIndex* index = GetPin(pin);
    int32 irqindex = -1;

    irqindex = Bit2Bitnum(index->pin);
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_hdr_tab)){
        return -ENONESYS;
    }

    x_base level = CriticalAreaLock();
    if (pin_irq_hdr_tab[irqindex].pin == -1){
        CriticalAreaUnLock(level);
        return EOK;
    }
    pin_irq_hdr_tab[irqindex].pin  = -1;
    pin_irq_hdr_tab[irqindex].hdr  = NONE;
    pin_irq_hdr_tab[irqindex].mode = 0;
    pin_irq_hdr_tab[irqindex].args = NONE;
    CriticalAreaUnLock(level);
 
    return EOK;
}

static int32 GpioIrqEnable(x_base pin)
{
    const struct PinIndex* index = GetPin(pin);
    int32 irqindex = -1;
    const struct PinIrq *irq;
    NVIC_InitTypeDef NVIC_InitStructure;
    EXTI_InitTypeDef EXTI_InitStructure;

    irqindex = Bit2Bitnum(index->pin);
    if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_hdr_tab)){
        return -ENONESYS;
    }
    x_base level = CriticalAreaLock();
    if (pin_irq_hdr_tab[irqindex].pin == -1){
        CriticalAreaUnLock(level);
        return -ENONESYS;
    }

    irq = GetPinIrq(pin);
    if (irq == NONE){
        CriticalAreaUnLock(level);
        return -ENONESYS;
    }
    SYSCFG_EXTILineConfig(irq->port_source, irq->pin_source);
    EXTI_InitStructure.EXTI_Line = irq->exti_line;
    EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
    switch (pin_irq_hdr_tab[irqindex].mode)
    {
    case GPIO_IRQ_EDGE_RISING:
        EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
        break;
    case GPIO_IRQ_EDGE_FALLING:
        EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
        break;
    case GPIO_IRQ_EDGE_BOTH:
        EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising_Falling;
        break;
    }
    EXTI_InitStructure.EXTI_LineCmd = ENABLE;
    EXTI_Init(&EXTI_InitStructure);
    NVIC_InitStructure.NVIC_IRQChannel = irq->irq_exti_channel;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 2;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    CriticalAreaUnLock(level);
    return EOK;
}

static int32 GpioIrqDisable(x_base pin)
{
    const struct PinIndex* index = GetPin(pin);
    const struct PinIrq *irq;
    EXTI_InitTypeDef EXTI_InitStructure;
    
    irq = GetPinIrq(index->pin);
    NULL_PARAM_CHECK(irq);

    EXTI_InitStructure.EXTI_Line = irq->exti_line;
    EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
    EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
    EXTI_InitStructure.EXTI_LineCmd = DISABLE;  
    EXTI_Init(&EXTI_InitStructure); 
    return EOK;
}
