==> xuos/xiuos/Ubiquitous/XiUOS/board/k210-emulator/third_party_driver/gpio/connect_gpio.c <==
#include <xiuos.h>
#include <device.h>
#include <fpioa.h>
#include <gpiohs.h>
#include "drv_io_config.h"
#include <plic.h>
#include <utils.h>
#include "connect_gpio.h"
#define FUNC_GPIOHS(n) (FUNC_GPIOHS0 + n)

static uint32 GpioConfigMode(int mode, uint8_t pin_channel)
{
    switch (mode)
    {
        case GPIO_CFG_OUTPUT:
            gpiohs_set_drive_mode(pin_channel, GPIO_DM_OUTPUT);
            break;
        case GPIO_CFG_INPUT:
            gpiohs_set_drive_mode(pin_channel, GPIO_DM_INPUT);
            break;
        case GPIO_CFG_INPUT_PULLUP:
            gpiohs_set_drive_mode(pin_channel, GPIO_DM_INPUT_PULL_UP);
            break;
        case GPIO_CFG_INPUT_PULLDOWN:
            gpiohs_set_drive_mode(pin_channel, GPIO_DM_INPUT_PULL_DOWN);
            break;
        case GPIO_CFG_OUTPUT_OD:
            break;
        default:
            break;
    }
    return EOK;

}

static uint32 GpioIrqRegister(int32 pin_channel, int32 mode, void (*hdr)(void *args), void *args)
{
    IrqTable[pin_channel].hdr = hdr;
    IrqTable[pin_channel].args = args;
    switch (mode)
    {
        case GPIO_IRQ_EDGE_RISING:
            IrqTable[pin_channel].edge = GPIO_PE_RISING;
            break;
        case GPIO_IRQ_EDGE_FALLING:
            IrqTable[pin_channel].edge = GPIO_PE_FALLING;
            break;
        case GPIO_IRQ_EDGE_BOTH:
            IrqTable[pin_channel].edge = GPIO_PE_BOTH;
            break;
        case GPIO_IRQ_LEVEL_HIGH:
            IrqTable[pin_channel].edge = GPIO_PE_LOW;
            break;
        case GPIO_IRQ_LEVEL_LOW:
            IrqTable[pin_channel].edge = GPIO_PE_HIGH;
            break;
        default:
            break;
    }
    gpiohs_set_pin_edge(pin_channel, IrqTable[pin_channel].edge);

    isrManager.done->registerIrq(IRQN_GPIOHS0_INTERRUPT + pin_channel, pin_irq, NONE);
 
    return EOK;
}

static uint32 GpioIrqFree(int32 pin_channel)
{
    IrqTable[pin_channel].hdr = NONE;
    IrqTable[pin_channel].args = NONE;
    return EOK;
}

static uint32 GpioIrqEnable(int32 pin_channel)
{
    isrManager.done->enableIrq(IRQN_GPIOHS0_INTERRUPT + pin_channel);
    
    return EOK;
}

static uint32 GpioIrqDisable(int32 pin_channel)
{
     isrManager.done->disableIrq(IRQN_GPIOHS0_INTERRUPT + pin_channel);
     return EOK;
}
